Bug 494359 - KConfig.WindowStateSaver does not store window maximization state
Summary: KConfig.WindowStateSaver does not store window maximization state
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.7.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords: regression
: 494843 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-10-09 17:04 UTC by EpicTux123
Modified: 2024-11-06 21:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description EpicTux123 2024-10-09 17:04:43 UTC
After upgrading to Plasma 6.2.0, Discover window state is not stored — i.e. maximized state.
Size and position are stored, but state — maximized or minimized — is not.

On X11 with proprietary NVIDIA drivers.

Operating System: Fedora Linux 40
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2
Kernel Version: 6.10.12-200.fc40.x86_64 (64-bit)
Graphics Platform: X11
Comment 1 Nate Graham 2024-10-10 21:27:20 UTC
This will have been caused by the port to KConfig.WindowStateSaver, which gained the feature to remember maximization …but then later lost it due to the feature being reverted because it broke something else. Moving to KConfig to track where it needs to be fixed, since we have since ported, like, almost everything to KConfig.WindowStateSaver.
Comment 2 Bug Janitor Service 2024-11-05 22:24:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kconfig/-/merge_requests/336
Comment 3 Nate Graham 2024-11-06 05:49:36 UTC
*** Bug 494843 has been marked as a duplicate of this bug. ***
Comment 4 Joshua Goins 2024-11-06 15:16:51 UTC
Git commit 43de355b2cb1bceda6884729c9a3f10eaf982ede by Joshua Goins.
Committed on 05/11/2024 at 22:26.
Pushed by cullmann into branch 'master'.

Fix restoration of maximization state for QtQuick windows (for real)

The previous fix in 93b63d128022ebf670717d3330226a0949ffedc0 caused a
behavior change for QtWidgets applications since we ended up called
show().

To be safe let's only use setVisibility when dealing with QtQuick
windows. The fix was written to work around oddities only present in
QtQuick windows anyway.

M  +9    -1    src/qml/kwindowstatesaverquick.cpp

https://invent.kde.org/frameworks/kconfig/-/commit/43de355b2cb1bceda6884729c9a3f10eaf982ede