Fix restoration of maximization state for QtQuick windows (for real)

The previous fix in 93b63d128022ebf670717d3330226a0949ffedc0 caused a
behavior change for QtWidgets applications since we ended up called
show().

To be safe let's only use setVisibility when dealing with QtQuick
windows. The fix was written to work around oddities only present in
QtQuick windows anyway.

BUG: 494359